# hakabulbul

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: README.md  control registers.md  gdt.md  idt.md  roadmap.md
libarch/: Cargo.toml  README.md
libarch/src/: lib.rs
libarch/src/instructions/: interrupts.rs  mod.rs  tables.rs
libarch/src/models/: address.rs  mod.rs  privilage.rs  privilege.rs
libarch/src/models/gdt/: descriptor.rs  mod.rs  tss.rs
libarch/src/models/interrupts/: descriptors.rs  idt.rs  mod.rs  stack.rs
libarch/src/models/segments/: mod.rs  structs.rs  traits.rs
libarch/src/registers/: mod.rs  rflags.rs
libarch/src/registers/control/: cr0.rs  cr2.rs  cr3.rs  cr4.rs  cr8.rs  mod.rs
libkernel/: Cargo.toml  README.md
libkernel/src/: lib.rs  panic.rs
libkernel/src/gdt/: mod.rs
libkernel/src/serial_ports/: mod.rs
libkernel/src/tables/: mod.rs
libkernel/src/tables/gdt/: mod.rs
libkernel/src/tables/idt/: mod.rs
libkernel/src/tests/: gdt.rs  mod.rs  testable.rs
libkernel/src/tests/qemu_exit/: mod.rs
libkernel/src/tests/vga/: mod.rs
libkernel/src/vga/: chars.rs  mod.rs  vga_buffer.rs
runner/: Cargo.toml  README.md
runner/src/: main.rs
runner/src/initialization/: gdt.rs  mod.rs
