[package]
name = "libkernel"
version = "0.1.0"
edition = "2024"

[lib]
name = "kernel"
path = "src/lib.rs"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none",
]

[dependencies]
uart_16550 = "0.2.0"
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
