[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hakabulbul"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-args = [
    "-d", "cpu,int",
    # "-no-reboot"
]

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.2"
libkernel = { path = "../libkernel" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
